liitecontroller fix